--- a/src/main/resources/templates/item/itemForm.html
+++ b/src/main/resources/templates/item/itemForm.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq,net.nz/thymeleaf/layout"
+layout:decprate="~{layouts/layout1}">
+
+<div layout:fragment="content">
+
+    <h1>상품등록 페이지입니다.</h1>
+
+</div>
 </html>
